# mcp-servers

./: .gitignore
open-webui-mcp/: CONTRIBUTING.md  FAQ.md  README.md  TOOLS.md  pyproject.toml
open-webui-mcp/deployment/: README.md
open-webui-mcp/deployment/scripts/: install.sh
open-webui-mcp/deployment/systemd/: open-webui-mcp.service
open-webui-mcp/src/services/: client.py
open-webui-mcp/src/tools/: base.py  factory.py
open-webui-mcp/src/tools/adds/: add_memory_memories_add_tool.py
open-webui-mcp/src/tools/admin/: admin_health_tool.py
open-webui-mcp/src/tools/audio/: transcription_audio_transcriptions_tool.py  update_audio_config_audio_config_update_tool.py
open-webui-mcp/src/tools/auths/: add_user_auths_add_tool.py  ldap_auth_auths_ldap_tool.py  signin_auths_signin_tool.py  (+6 more)
open-webui-mcp/src/utils/: error_handler.py  validation.py
recipez-mcp/: .env.example  .gitignore  README.md  pyproject.toml  recipez-mcp.service
recipez-mcp/scripts/: setup-system.sh  setup-user.sh
recipez-mcp/src/recipez_mcp/: __init__.py  __main__.py  factory.py  server.py
recipez-mcp/src/recipez_mcp/client/: __init__.py  http_client.py
recipez-mcp/src/recipez_mcp/config/: __init__.py  settings.py
recipez-mcp/src/recipez_mcp/models/: __init__.py  api_models.py  mcp_models.py
recipez-mcp/src/recipez_mcp/tools/: __init__.py  ai.py  api_keys.py  base_tool.py  categories.py  email.py  grocery.py  health.py  images.py  ingredients.py  profile.py  recipes.py  steps.py
recipez-mcp/src/recipez_mcp/utils/: __init__.py  errors.py  logging.py  validation.py
(+125 files in other folders)
